2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Add new category, 'tarball'. Pretend every
	time there is a 'release' that it is an tarball due event and the
	actual release is two days later. Further, add a wiki_text method to
	return appropriate text for the wiki layout.
	* schedule/wiki.py: Totally rewrite this thing. Doesn't complete work
	mostly due to wiki_text not giving a good text representation.

2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/libschedule.py: Change the schedule format to be a bit more
	'free'. Further, add version information to the file.
	* schedule/2.22.schedule: Update schedule per code changes.

2007-12-30  Olav Vitters  <olav@bkor.dhs.org>

	* schedule/2.22.schedule:
	* schedule/automail.py:
	* schedule/2.22.wiki:
	* schedule/ical.py:
	* schedule/test.wiki:
	* schedule/wiki.py:
	* schedule/libschedule.py:
	* schedule/templates:
	* schedule/templates/release-unstable:

	Add vuntz schedule scripts to SVN so I can properly hack it into submission.

2007-12-28  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Warn when there is a revision
	set, but tarball-conversion lacks a max_version. This could lead to
	too new versions being released. Further, only warn if there is
	something wrong.

2007-12-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Close all cached connections on
	error (ctrl-c or otherwise). This is needed as otherwise the script
	wouldn't exit. Also do some code cleanups.

2007-12-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Rewrite downloading retry code
	to avoid recursion and to wait a bit between retries. Also allow Curl
	to resume existing downloads. However, do download from scratch when
	needed (e.g. when whole file has been downloaded and some part is
	corrupted).

2007-12-25  Olav Vitters  <olav@bkor.dhs.org>

	* smoketesting/convert-to-tarballs.py: Make it work for stable GNOME